FlightPath 5.x Changelog
========================

2016-02-09
  Fixed MySQL bug when editing groups.  Fixed bug where group_min_hours_required should be group_min_hours_allowed in the database.

2016-02-01
  Removed section from system.module where submissions were being temporarily stored in the session.  It wasn't being used anyway,
  and it presented a possible security issue on improperly secured servers.
  

2016-01-19
  Changed default password scheme to use new D7 inspired PHPass technique, instead of basic md5's.  Added new password.inc file, virtually identical to the
  one which ships with D7.
  

2016-01-14
  Converted the advising history tab to use the content render api, so other modules can add content to that page.
  Also made it so that past advising histories appear in a collapsible fieldset, to save space.
  

2016-01-11
  Changed course popup description to use new content render API system.
  
  Added "override_degree_hours" field to degrees and draft_degrees tables, and db_override_degree_hours in the _DegreeClass object,
  for future use.
  
  Made small tweaks to fix bugs so installation works correctly.
  

2016-01-07
  Workng on var hour groups, ie, "min_hours_allowed".  Also, added in mechanism for changing the name of FlightPath to something else, if desired.
  

2016-01-05
  Beginning work on optional min hours for groups.
  

2016-01-04
  Creating new render api system, for rendering arrays similar to form arrays.  This lets other modules hook in to make changes.
  
  Changed forms.inc to render.inc


2015-12-31
  Initial commit of 5.x branch, from 4.10-dev branch. Enough has changed to warrent naming this a new core version.